# atlas

./: .gitignore  GNUmakefile  README.md  limine.cfg
kernel/: Cargo.toml  GNUmakefile  atlas-x86_64.json
kernel/.cargo/: config.toml
kernel/src/: boot.rs  main.rs  troll.tga
kernel/src/api/: mod.rs
kernel/src/api/display/: mod.rs
kernel/src/api/display/framebuffer/: mod.rs
kernel/src/api/display/terminal/: font.rs  macros.rs  mod.rs
kernel/src/api/syscall/: id.rs  mod.rs
kernel/src/arch/x86_64/: mod.rs
kernel/src/arch/x86_64/interrupts/: gdt.rs  idt.rs
kernel/src/arch/x86_64/syscall/: init.rs  mod.rs
